--- a/msgraphforsharepoint_list_lists.html
+++ b/msgraphforsharepoint_list_lists.html
@@ -112,7 +112,18 @@
                             <tbody>
                                 {% for list in result.data %}
                                     <tr>
-                                        <td>{{ list.displayName | default:"None" }}</td>
+                                        {% if list.displayName %}
+                                            <td>
+                                                <a href="javascript:;"
+                                                onclick="context_menu(this, [{'contains': ['sharepoint list name'], 'value': '{{ list.displayName }}' }], 0, {{ container.id }}, null, false);">
+                                                    {{ list.displayName }}
+                                                    &nbsp;
+                                                    <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                                                </a>
+                                            </td>
+                                        {% else %}
+                                            <td>None</td>
+                                        {% endif %}
                                         {% if list.id %}
                                             <td>
                                                 <a href="javascript:;"
