Remove extra code

--- a/readme.html
+++ b/readme.html
@@ -29,11 +29,12 @@ and limitations under the License.
           <li>Under <b>Authentication</b>, select <b>Add a platform</b>. In the <b>Add a platform</b> window, select <b>Web</b>. The <b>Redirect URLs</b> should be filled right here. We will get <b>Redirect URLs</b> from the Phantom asset we create below in the section titled <b>Phantom Asset for SharePoint</b>. This step is required only if you are a non-admin user.</li>
           <li>Under <b>API Permissions</b> Click on <b>Add a permission</b>.</li>
           <li>Under the <b>Microsoft API</b> section, select <b>Microsoft Graph</b>.</li>
-          <li>Provide the following Application permissions to the app.</li>
+          <li>Provide the following Application and Delegated permissions to the app.</li>
             <ul>
               <li>Sites.Read.All</li>
               <li>Files.Read.All</li>
               <li>Files.ReadWrite.All</li>
+              <li>Sites.ReadWrite.All</li>
             </ul>
           <li>After making these changes, click <b>Add permissions</b> at the bottom of the screen.</li>
         </ul>
