--- a/msgraphforsharepoint_get_list.html
+++ b/msgraphforsharepoint_get_list.html
@@ -1,16 +1,17 @@
 {% extends 'widgets/widget_template.html' %}
 {% load custom_template %}
-
-{% block custom_title_prop %}{% if title_logo %}style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"{% endif %}{% endblock %}
+{% block custom_title_prop %}
+  {% if title_logo %}
+    style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"
+  {% endif %}
+{% endblock %}
 {% block title1 %}{{ title1 }}{% endblock %}
 {% block title2 %}{{ title2 }}{% endblock %}
-{% block custom_tools %}
-{% endblock %}
-
-{% block widget_content %} <!-- Main Start Block -->
-
-<!-- File: msgraphforsharepoint_get_list.html
-  Copyright (c) 2022-2024 Splunk Inc.
+{% block custom_tools %}{% endblock %}
+{% block widget_content %}
+  <!-- Main Start Block -->
+  <!-- File: msgraphforsharepoint_get_list.html
+  Copyright (c) 2022-2025 Splunk Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
@@ -22,9 +23,7 @@
   either express or implied. See the License for the specific language governing permissions
   and limitations under the License.
 -->
-
-<style>
-
+  <style>
     .msgraphforsharepoint a:hover {
         text-decoration:underline;
     }
@@ -86,81 +85,85 @@
         white-space:nowrap;
     }
 
-</style>
-<div class="msgraphforsharepoint" style="overflow: auto; width: 100%; height: 100%; padding-left:10px; padding-right:10px"> <!-- Main Div -->
-    {% for result in results %} <!-- loop for each result -->
-    <br>
-
-    <!------------------- For each Result ---------------------->
-    {% if not result.data %}
+  </style>
+  <div class="msgraphforsharepoint"
+       style="overflow: auto;
+              width: 100%;
+              height: 100%;
+              padding-left:10px;
+              padding-right:10px">
+    <!-- Main Div -->
+    {% for result in results %}
+      <!-- loop for each result -->
+      <br>
+      <!------------------- For each Result ---------------------->
+      {% if not result.data %}
         <h4 class="wf-h4-style">No data found</h4>
-
-    {% else %}
+      {% else %}
         <div class="metadata_div">
-            <!--Default View-->
-            <div class="panel-group" id="server-information">
-                <div class="panel">
-                    <div id="default-view-table" class="panel-collapse collapse in">
-                        {% for list in result.data %}
-                            <h3 class="wf-h3-style">Column Info</h3>
-                            <table class="wf-table-horizontal datatable">
-                                <thead>
-                                    <tr>
-                                        <th>Name</th>
-                                        <th>Display Name</th>
-                                        <th>Description</th>
-                                        <th>Hidden</th>
-                                        <th>Required</th>
-                                        <th>Read Only</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for column in list.columns %}
-                                        <tr>
-                                            <td>{{ column.name | default:"None" }}</td>
-                                            <td>{{ column.displayName | default:"None" }}</td>
-                                            <td>{{ column.description | default:"None" }}</td>
-                                            <td>{{ column.hidden | default:"False" }}</td>
-                                            <td>{{ column.required | default:"False" }}</td>
-                                            <td>{{ column.readOnly | default:"False" }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-
-                            <h3 class="wf-h3-style">Items Info</h3>
-                            <table class="wf-table-horizontal datatable">
-                                <thead>
-                                    <tr>
-                                        <th>ID</th>
-                                        <th>Title</th>
-                                        <th>Created By</th>
-                                        <th>Last Modified By</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for item in list.items %}
-                                        <tr>
-                                            <td>{{ item.id | default:"None" }}</td>
-                                            <td>{{ item.fields.Title | default:"None" }}</td>
-                                            <td>{{ item.createdBy.user.displayName | default:"None" }}</td>
-                                            <td>{{ item.lastModifiedBy.user.displayName | default:"None" }}</td>
-                                        </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        {% endfor %}
-                    </div>
-                </div>
+          <!--Default View-->
+          <div class="panel-group" id="server-information">
+            <div class="panel">
+              <div id="default-view-table" class="panel-collapse collapse in">
+                {% for list in result.data %}
+                  <h3 class="wf-h3-style">Column Info</h3>
+                  <table class="wf-table-horizontal datatable">
+                    <thead>
+                      <tr>
+                        <th>Name</th>
+                        <th>Display Name</th>
+                        <th>Description</th>
+                        <th>Hidden</th>
+                        <th>Required</th>
+                        <th>Read Only</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for column in list.columns %}
+                        <tr>
+                          <td>{{ column.name | default:"None" }}</td>
+                          <td>{{ column.displayName | default:"None" }}</td>
+                          <td>{{ column.description | default:"None" }}</td>
+                          <td>{{ column.hidden | default:"False" }}</td>
+                          <td>{{ column.required | default:"False" }}</td>
+                          <td>{{ column.readOnly | default:"False" }}</td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                  <h3 class="wf-h3-style">Items Info</h3>
+                  <table class="wf-table-horizontal datatable">
+                    <thead>
+                      <tr>
+                        <th>ID</th>
+                        <th>Title</th>
+                        <th>Created By</th>
+                        <th>Last Modified By</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      {% for item in list.items %}
+                        <tr>
+                          <td>{{ item.id | default:"None" }}</td>
+                          <td>{{ item.fields.Title | default:"None" }}</td>
+                          <td>{{ item.createdBy.user.displayName | default:"None" }}</td>
+                          <td>{{ item.lastModifiedBy.user.displayName | default:"None" }}</td>
+                        </tr>
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                {% endfor %}
+              </div>
             </div>
+          </div>
         </div>
         <br>
-    {% endif %}
-    {% endfor %} <!-- loop for each result end -->
-</div> <!-- Main Div -->
-
-
-<script>
+      {% endif %}
+    {% endfor %}
+    <!-- loop for each result end -->
+  </div>
+  <!-- Main Div -->
+  <script>
     $.extend(true, $.fn.dataTable.defaults, {
         "searching": false,
         "bLengthChange": false,
@@ -181,5 +184,6 @@
     $('.datatable').DataTable({
         order: []
     });
-</script>
-{% endblock %} <!-- Main Start Block -->
+  </script>
+{% endblock %}
+<!-- Main Start Block -->
