--- a/msgraphforsharepoint_list_lists.html
+++ b/msgraphforsharepoint_list_lists.html
@@ -1,16 +1,17 @@
 {% extends 'widgets/widget_template.html' %}
 {% load custom_template %}
-
-{% block custom_title_prop %}{% if title_logo %}style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"{% endif %}{% endblock %}
+{% block custom_title_prop %}
+  {% if title_logo %}
+    style="background-size: auto 60%; background-position: 50%; background-repeat: no-repeat; background-image: url('/app_resource/{{ title_logo }}');"
+  {% endif %}
+{% endblock %}
 {% block title1 %}{{ title1 }}{% endblock %}
 {% block title2 %}{{ title2 }}{% endblock %}
-{% block custom_tools %}
-{% endblock %}
-
-{% block widget_content %} <!-- Main Start Block -->
-
-<!-- File: msgraphforsharepoint_list_lists.html
-  Copyright (c) 2022-2024 Splunk Inc.
+{% block custom_tools %}{% endblock %}
+{% block widget_content %}
+  <!-- Main Start Block -->
+  <!-- File: msgraphforsharepoint_list_lists.html
+  Copyright (c) 2022-2025 Splunk Inc.
   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at
@@ -22,9 +23,7 @@
   either express or implied. See the License for the specific language governing permissions
   and limitations under the License.
 -->
-
-<style>
-
+  <style>
     .msgraphforsharepoint a:hover {
         text-decoration:underline;
     }
@@ -86,71 +85,76 @@
         white-space:nowrap;
     }
 
-</style>
-<div class="msgraphforsharepoint" style="overflow: auto; width: 100%; height: 100%; padding-left:10px; padding-right:10px"> <!-- Main Div -->
-    {% for result in results %} <!-- loop for each result -->
-    <br>
-
-    <!------------------- For each Result ---------------------->
-    {% if not result.data %}
+  </style>
+  <div class="msgraphforsharepoint"
+       style="overflow: auto;
+              width: 100%;
+              height: 100%;
+              padding-left:10px;
+              padding-right:10px">
+    <!-- Main Div -->
+    {% for result in results %}
+      <!-- loop for each result -->
+      <br>
+      <!------------------- For each Result ---------------------->
+      {% if not result.data %}
         <h4 class="wf-h4-style">No data found</h4>
-
-    {% else %}
+      {% else %}
         <div class="metadata_div">
-            <!--Default View-->
-            <div class="panel-group" id="server-information">
-                <div class="panel">
-                    <div id="default-view-table" class="panel-collapse collapse in">
-                        <h3 class="wf-h3-style">List Info</h3>
-                        <table class="wf-table-horizontal datatable">
-                            <thead>
-                                <tr>
-                                    <th>List Name</th>
-                                    <th>List ID</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for list in result.data %}
-                                    <tr>
-                                        {% if list.displayName %}
-                                            <td>
-                                                <a href="javascript:;"
-                                                onclick="context_menu(this, [{'contains': ['sharepoint list name'], 'value': '{{ list.displayName }}' }], 0, {{ container.id }}, null, false);">
-                                                    {{ list.displayName }}
-                                                    &nbsp;
-                                                    <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                                                </a>
-                                            </td>
-                                        {% else %}
-                                            <td>None</td>
-                                        {% endif %}
-                                        {% if list.id %}
-                                            <td>
-                                                <a href="javascript:;"
-                                                onclick="context_menu(this, [{'contains': ['sharepoint list id'], 'value': '{{ list.id }}' }], 0, {{ container.id }}, null, false);">
-                                                    {{ list.id }}
-                                                    &nbsp;
-                                                    <span class="fa fa-caret-down" style="font-size: smaller;"></span>
-                                                </a>
-                                            </td>
-                                        {% else %}
-                                            <td>None</td>
-                                        {% endif %}
-                                    </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+          <!--Default View-->
+          <div class="panel-group" id="server-information">
+            <div class="panel">
+              <div id="default-view-table" class="panel-collapse collapse in">
+                <h3 class="wf-h3-style">List Info</h3>
+                <table class="wf-table-horizontal datatable">
+                  <thead>
+                    <tr>
+                      <th>List Name</th>
+                      <th>List ID</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for list in result.data %}
+                      <tr>
+                        {% if list.displayName %}
+                          <td>
+                            <a href="javascript:;"
+                               onclick="context_menu(this, [{'contains': ['sharepoint list name'], 'value': '{{ list.displayName }}' }], 0, {{ container.id }}, null, false);">
+                              {{ list.displayName }}
+                              &nbsp;
+                              <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                            </a>
+                          </td>
+                        {% else %}
+                          <td>None</td>
+                        {% endif %}
+                        {% if list.id %}
+                          <td>
+                            <a href="javascript:;"
+                               onclick="context_menu(this, [{'contains': ['sharepoint list id'], 'value': '{{ list.id }}' }], 0, {{ container.id }}, null, false);">
+                              {{ list.id }}
+                              &nbsp;
+                              <span class="fa fa-caret-down" style="font-size: smaller;"></span>
+                            </a>
+                          </td>
+                        {% else %}
+                          <td>None</td>
+                        {% endif %}
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
             </div>
+          </div>
         </div>
         <br>
-    {% endif %}
-    {% endfor %} <!-- loop for each result end -->
-</div> <!-- Main Div -->
-
-
-<script>
+      {% endif %}
+    {% endfor %}
+    <!-- loop for each result end -->
+  </div>
+  <!-- Main Div -->
+  <script>
     $.extend(true, $.fn.dataTable.defaults, {
         "searching": false,
         "bLengthChange": false,
@@ -171,5 +175,6 @@
     $('.datatable').DataTable({
         order: []
     });
-</script>
-{% endblock %} <!-- Main Start Block -->
+  </script>
+{% endblock %}
+<!-- Main Start Block -->
